--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ document.write('</frameset>');
 
 <body>
 <p>
-<a href="webhelpleft.htm">PF2 Remake V1.2</a>
+<a href="webhelpleft.htm">PF2 Remake V1.3 v20230118</a>
 <br>
 <a href="http://www.softany.com/winchm/">This document is created with Softany WinCHM pro 4.</a>
 </p>
