--- a/topics/基本/工具和配件_(Tools_and_Accessories).htm
+++ b/topics/基本/工具和配件_(Tools_and_Accessories).htm
@@ -210,7 +210,7 @@ window.onload = function(){originalOnload();parent.contentLoaded = true;};
 
 
 <div id="winchm_template_top">
-	<div id="winchm_template_button"><A href="黑火药攻城武器_(Black_Powder_Siege_Weapons).htm" title="Previous topic"><img id="winchm_template_prev" alt="Previous topic" src="../template2/btn_prev_n.gif" border="0"></a><A href="$$unsavedpage1.htm" title="Next topic"><img id="winchm_template_next" alt="Next topic" src="../template2/btn_next_n.gif" border="0"></a></div>
+	<div id="winchm_template_button"><A href="黑火药攻城武器_(Black_Powder_Siege_Weapons).htm" title="Previous topic"><img id="winchm_template_prev" alt="Previous topic" src="../template2/btn_prev_n.gif" border="0"></a><A href="序言.htm" title="Next topic"><img id="winchm_template_next" alt="Next topic" src="../template2/btn_next_n.gif" border="0"></a></div>
 	<div id="winchm_template_navigation">Help &gt; 
 <A href="枪械全书.htm">枪械全书</A> &gt; <A href="第四章：枪支装备_(Guns_Equipment).htm">第四章：枪支装备</A> &gt; </div>
 	<div id="winchm_template_title">工具和配件</div>
