--- a/topics/基本/法术.htm
+++ b/topics/基本/法术.htm
@@ -210,7 +210,7 @@ window.onload = function(){originalOnload();parent.contentLoaded = true;};
 
 
 <div id="winchm_template_top">
-	<div id="winchm_template_button"><A href="新建项目.htm" title="Previous topic"><img id="winchm_template_prev" alt="Previous topic" src="../template2/btn_prev_n.gif" border="0"></a><A href="../怪物图鉴/page_4.html" title="Next topic"><img id="winchm_template_next" alt="Next topic" src="../template2/btn_next_n.gif" border="0"></a></div>
+	<div id="winchm_template_button"><A href="新建项目.htm" title="Previous topic"><img id="winchm_template_prev" alt="Previous topic" src="../template2/btn_prev_n.gif" border="0"></a><img id="winchm_template_next" alt="Next topic" src="../template2/btn_next_g.gif" border="0"></div>
 	<div id="winchm_template_navigation">Help &gt; 
 <A href="$$unsavedpage57.htm">预言破灭之年</A> &gt; <A href="$$unsavedpage13.htm">【LOF】预言破灭之年-火烙党</A> &gt; </div>
 	<div id="winchm_template_title">法术</div>
