--- a/topics/怪物图鉴/2.19祈并者（Petitioner）/祈并者（Petitioner）.htm
+++ b/topics/怪物图鉴/2.19祈并者（Petitioner）/祈并者（Petitioner）.htm
@@ -210,7 +210,7 @@ window.onload = function(){originalOnload();parent.contentLoaded = true;};
 
 
 <div id="winchm_template_top">
-	<div id="winchm_template_button"><A href="../2.17植物（Plant）/萨德树精（Sard）.htm" title="Previous topic"><img id="winchm_template_prev" alt="Previous topic" src="../../template2/btn_prev_n.gif" border="0"></a><A href="../$$unsavedpage33.htm" title="Next topic"><img id="winchm_template_next" alt="Next topic" src="../../template2/btn_next_n.gif" border="0"></a></div>
+	<div id="winchm_template_button"><A href="../2.17植物（Plant）/萨德树精（Sard）.htm" title="Previous topic"><img id="winchm_template_prev" alt="Previous topic" src="../../template2/btn_prev_n.gif" border="0"></a><A href="../2.18不死（Undead）/伏行之手（Crawling_hand）.htm" title="Next topic"><img id="winchm_template_next" alt="Next topic" src="../../template2/btn_next_n.gif" border="0"></a></div>
 	<div id="winchm_template_navigation">Help &gt; 
 <A href="../怪物图鉴2.htm">怪物图鉴2</A> &gt; <A href="../$$unsavedpage32.htm">17祈并者（Petitioner）</A> &gt; </div>
 	<div id="winchm_template_title">祈并者（Petitioner）</div>
