--- a/topics/怪物图鉴/暴走法术（Roiling_Incant）.htm
+++ b/topics/怪物图鉴/暴走法术（Roiling_Incant）.htm
@@ -210,7 +210,7 @@ window.onload = function(){originalOnload();parent.contentLoaded = true;};
 
 
 <div id="winchm_template_top">
-	<div id="winchm_template_button"><A href="付丧神（Tsukumogami）.htm" title="Previous topic"><img id="winchm_template_prev" alt="Previous topic" src="../template2/btn_prev_n.gif" border="0"></a><A href="01游戏主持基础/01一般性建议.htm" title="Next topic"><img id="winchm_template_next" alt="Next topic" src="../template2/btn_next_n.gif" border="0"></a></div>
+	<div id="winchm_template_button"><A href="付丧神（Tsukumogami）.htm" title="Previous topic"><img id="winchm_template_prev" alt="Previous topic" src="../template2/btn_prev_n.gif" border="0"></a><img id="winchm_template_next" alt="Next topic" src="../template2/btn_next_g.gif" border="0"></div>
 	<div id="winchm_template_navigation">Help &gt; 
 <A href="$$unsavedpage34.htm">怪物图鉴3</A> &gt; </div>
 	<div id="winchm_template_title">暴走法术（Roiling Incant）</div>
