--- a/topics/怪物图鉴/河童（Kappa）.htm
+++ b/topics/怪物图鉴/河童（Kappa）.htm
@@ -210,7 +210,7 @@ window.onload = function(){originalOnload();parent.contentLoaded = true;};
 
 
 <div id="winchm_template_top">
-	<div id="winchm_template_button"><A href="$$unsavedpage38.htm" title="Previous topic"><img id="winchm_template_prev" alt="Previous topic" src="../template2/btn_prev_n.gif" border="0"></a><A href="陆獭人（Kushtaka）.htm" title="Next topic"><img id="winchm_template_next" alt="Next topic" src="../template2/btn_next_n.gif" border="0"></a></div>
+	<div id="winchm_template_button"><A href="衔尾蛇（Ouroboros）.htm" title="Previous topic"><img id="winchm_template_prev" alt="Previous topic" src="../template2/btn_prev_n.gif" border="0"></a><A href="陆獭人（Kushtaka）.htm" title="Next topic"><img id="winchm_template_next" alt="Next topic" src="../template2/btn_next_n.gif" border="0"></a></div>
 	<div id="winchm_template_navigation">Help &gt; 
 <A href="$$unsavedpage34.htm">怪物图鉴3</A> &gt; <A href="$$unsavedpage38.htm">魔兽（Beast）</A> &gt; </div>
 	<div id="winchm_template_title">河童（Kappa）</div>
