--- a/topics/怪物图鉴/衔尾蛇（Ouroboros）.htm
+++ b/topics/怪物图鉴/衔尾蛇（Ouroboros）.htm
@@ -210,7 +210,7 @@ window.onload = function(){originalOnload();parent.contentLoaded = true;};
 
 
 <div id="winchm_template_top">
-	<div id="winchm_template_button"><A href="思诞族（Ennosite）.htm" title="Previous topic"><img id="winchm_template_prev" alt="Previous topic" src="../template2/btn_prev_n.gif" border="0"></a><A href="$$unsavedpage38.htm" title="Next topic"><img id="winchm_template_next" alt="Next topic" src="../template2/btn_next_n.gif" border="0"></a></div>
+	<div id="winchm_template_button"><A href="思诞族（Ennosite）.htm" title="Previous topic"><img id="winchm_template_prev" alt="Previous topic" src="../template2/btn_prev_n.gif" border="0"></a><A href="河童（Kappa）.htm" title="Next topic"><img id="winchm_template_next" alt="Next topic" src="../template2/btn_next_n.gif" border="0"></a></div>
 	<div id="winchm_template_navigation">Help &gt; 
 <A href="$$unsavedpage34.htm">怪物图鉴3</A> &gt; <A href="$$unsavedpage37.htm">星界（Astral）</A> &gt; </div>
 	<div id="winchm_template_title">衔尾蛇（Ouroboros）</div>
