--- a/topics/怪物图鉴/怪物图鉴3索引.htm
+++ b/topics/怪物图鉴/怪物图鉴3索引.htm
@@ -210,7 +210,7 @@ window.onload = function(){originalOnload();parent.contentLoaded = true;};
 
 
 <div id="winchm_template_top">
-	<div id="winchm_template_button"><A href="$$unsavedpage34.htm" title="Previous topic"><img id="winchm_template_prev" alt="Previous topic" src="../template2/btn_prev_n.gif" border="0"></a><A href="怪物图鉴3生物特征（Creature_Traits）.htm" title="Next topic"><img id="winchm_template_next" alt="Next topic" src="../template2/btn_next_n.gif" border="0"></a></div>
+	<div id="winchm_template_button"><A href="2.18不死（Undead）/掠劫亡龙（Ravener）.htm" title="Previous topic"><img id="winchm_template_prev" alt="Previous topic" src="../template2/btn_prev_n.gif" border="0"></a><A href="怪物图鉴3生物特征（Creature_Traits）.htm" title="Next topic"><img id="winchm_template_next" alt="Next topic" src="../template2/btn_next_n.gif" border="0"></a></div>
 	<div id="winchm_template_navigation">Help &gt; 
 <A href="$$unsavedpage34.htm">怪物图鉴3</A> &gt; </div>
 	<div id="winchm_template_title">索引</div>
