--- a/webhelptoolbar.htm
+++ b/webhelptoolbar.htm
@@ -2,7 +2,7 @@
 <!-- saved from url=(0014)about:internet -->
 <html>
 <head>
-<title>PF2 怪物图鉴合集</title>
+<title>PF2 怪物图鉴合集 build20230522</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <script language="JavaScript" src="languages.js"></script>
 <link href="style.css" rel="stylesheet" type="text/css">
